Make custom dashboard cache images

--- a/src/main/dashboard/index.html
+++ b/src/main/dashboard/index.html
@@ -30,9 +30,26 @@
     <body>
         <section id="container">
             <div id="llfeed">
-                <img id="limelight" src="http://10.10.72.11:5802/"></img>
             </div>
-            <div id="cshipm"></div>
+            <div id="message">
+                <div id="cargoship">
+                    <img src="cargo_ship.png" style="height: 30vh" />
+                    <span class="big">Cargo ship mode</span>
+                </div>
+                <div id="rocket">
+                    <img src="rocket.png" style="height: 30vh" />
+                    <span class="big">Rocket mode</span>
+                </div>
+                <br /><br /><br/><br/><br />
+                <div id="cargo">
+                    <img src="hatchpanel.png" style="height: 30vh" />
+                    <span class="big">Has hatch panel</span>
+                </div>
+                <div id="hatch">
+                    <img src="cargo.png" style="height: 30vh" />
+                    <span class="big">Has cargo </span>
+                </div>
+            </div>
             </div><br />
         </section>
         
