Move CSS into its own file

--- a/src/main/dashboard/index.html
+++ b/src/main/dashboard/index.html
@@ -1,31 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            div {
-              vertical-align: top;
-              display: inline-block;
-              white-space: nowrap;
-            }
-
-            img {
-                float:left;
-            }
-            
-            .big {
-                font-size: 40pt;
-            }
-            .green {
-                background-color: green;
-            }
-            #limelight {
-                width: 40vw;
-            }
-
-            #cshipm {
-                width: 30vw;
-            }
-        </style>
+        <link href = "style.css" type="text/css" rel = "stylesheet"/>
     </head>
     <body>
         <section id="container">
@@ -47,7 +23,7 @@
                 </div>
                 <div id="hatch">
                     <img src="cargo.png" style="height: 30vh" />
-                    <span class="big">Has cargo </span>
+                    <span class="big">Has cargo</span>
                 </div>
             </div>
             </div><br />
