--- a/src/main/dashboard/index.html
+++ b/src/main/dashboard/index.html
@@ -6,6 +6,7 @@
     <body>
         <section id="container">
             <div id="llfeed">
+                <img src="http://10.10.72.11:5802" style="width: 40vw" />
             </div>
             <div id="message">
                 <div id="cargoship">
@@ -16,15 +17,18 @@
                     <img src="rocket.png" style="height: 30vh" />
                     <span class="big">Rocket mode</span>
                 </div>
-                <br /><br /><br/><br/><br />
-                <div id="cargo">
+                <br /><br /><br/>
+                <div id="hatch">
                     <img src="hatchpanel.png" style="height: 30vh" />
                     <span class="big">Has hatch panel</span>
                 </div>
-                <div id="hatch">
+                <div id="cargo">
                     <img src="cargo.png" style="height: 30vh" />
                     <span class="big">Has cargo</span>
                 </div>
+            </div>
+            <div id = "numberContainer">
+                
             </div>
             </div><br />
         </section>
