Complete adding elevator/wrist data to custom dashboard

--- a/src/main/dashboard/index.html
+++ b/src/main/dashboard/index.html
@@ -10,27 +10,28 @@
             </div>
             <div id="message">
                 <div id="cargoship">
-                    <img src="cargo_ship.png" style="height: 30vh" />
+                    <img src="cargo_ship.png" style="height: 15vh" />
                     <span class="big">Cargo ship mode</span>
                 </div>
                 <div id="rocket">
-                    <img src="rocket.png" style="height: 30vh" />
+                    <img src="rocket.png" style="height: 15vh" />
                     <span class="big">Rocket mode</span>
                 </div>
                 <br /><br /><br/>
                 <div id="hatch">
-                    <img src="hatchpanel.png" style="height: 30vh" />
+                    <img src="hatchpanel.png" style="height: 15vh" />
                     <span class="big">Has hatch panel</span>
                 </div>
                 <div id="cargo">
-                    <img src="cargo.png" style="height: 30vh" />
+                    <img src="cargo.png" style="height: 15vh" />
                     <span class="big">Has cargo</span>
                 </div>
             </div>
-            <div id = "numberContainer">
-                
-            </div>
             </div><br />
+            <div id = "numberContainer">
+                    <span> <b> Elevator Position: </b> </span> <span id = "elevatorPos"></span> <br>
+                    <span> <b> Wrist Position: </b> </span> <span id = "wristPos"></span>
+                </div> 
         </section>
         
         <script src="/networktables/networktables.js"></script>
