Add dashboard toggle between wrist control and limelight align

--- a/src/main/dashboard/index.html
+++ b/src/main/dashboard/index.html
@@ -26,6 +26,15 @@
                     <img src="cargo.png" style="height: 15vh" />
                     <span class="big">Has cargo</span>
                 </div>
+                <br /><br /><br/>
+                <div id="wrist">
+                    <img src="limelight.png" style="height: 15vh" />
+                    <span class="big">Limelight Align Mode</span>
+                </div>
+                <div id="align">
+                    <img src="wrist.png" style="height: 15vh" />
+                    <span class="big">Wrist Manual Mode</span>
+                </div>
             </div>
             </div><br />
             <div id = "numberContainer">
