--- a/src/main/dashboard/index.html
+++ b/src/main/dashboard/index.html
@@ -11,20 +11,20 @@
             <div id="message">
                 <div id="cargoship">
                     <img src="cargo_ship.png" style="height: 15vh" />
-                    <span class="big">Cargo ship mode</span>
+                    <span class="big">Cargo Ship Mode</span>
                 </div>
                 <div id="rocket">
                     <img src="rocket.png" style="height: 15vh" />
-                    <span class="big">Rocket mode</span>
+                    <span class="big">Rocket Mode</span>
                 </div>
                 <br /><br /><br/>
                 <div id="hatch">
                     <img src="hatchpanel.png" style="height: 15vh" />
-                    <span class="big">Has hatch panel</span>
+                    <span class="big">Has Hatch Panel</span>
                 </div>
                 <div id="cargo">
                     <img src="cargo.png" style="height: 15vh" />
-                    <span class="big">Has cargo</span>
+                    <span class="big">Has Cargo</span>
                 </div>
                 <br /><br /><br/>
                 <div id="wrist">
