Made all text comic sans

--- a/src/main/dashboard/index.html
+++ b/src/main/dashboard/index.html
@@ -42,7 +42,10 @@
                     <span> <b> Wrist Position: </b> </span> <span id = "wristPos"></span>
                 </div> 
         </section>
+
+        <!-- Hidden image of the limelight feed that the canvas pulls from -->
         <img src="http://10.10.72.11:5802/" class="hidden" id="limelight"/>
+        
         <script src="/networktables/networktables.js"></script>
         <script src="main.js"></script>
     </body>
