Add Kangaroo indicator to dashboard

--- a/src/main/dashboard/index.html
+++ b/src/main/dashboard/index.html
@@ -38,8 +38,9 @@
             </div>
             </div><br />
             <div id = "numberContainer">
-                    <span> <b> Elevator Position: </b> </span> <span id = "elevatorPos"></span> <br>
-                    <span> <b> Wrist Position: </b> </span> <span id = "wristPos"></span>
+                    <span> <b> Elevator Position: </b> </span> <span id = "elevatorPos"></span> <br />
+                    <span> <b> Wrist Position: </b> </span> <span id = "wristPos"></span><br />
+                    <span><b>Kangaroo battery percentage: </b> <span id="kangaroo_battery"></span></span>
                 </div> 
         </section>
 
