Modify drivetrain speed; remove rollers topspin; make controller rumble in cargo ship mode

--- a/src/main/dashboard/index.html
+++ b/src/main/dashboard/index.html
@@ -36,6 +36,9 @@
                     <span class="big">Wrist Manual Mode</span>
                 </div>
             </div>
+            <div id="pneumatics">
+                <span class="big"> <b> Extender: </b> </span><span class="big" id="extender"></span>
+            </div>
             </div><br />
             <div id = "numberContainer">
                     <span> <b> Elevator Position: </b> </span> <span id = "elevatorPos"></span> <br />
