Update custom dashboard to use new trigger modes

--- a/src/main/dashboard/index.html
+++ b/src/main/dashboard/index.html
@@ -10,30 +10,34 @@
             </div>
             <div id="message">
                 <div id="cargoship">
-                    <img src="cargo_ship.png" style="height: 15vh" />
+                    <img src="cargo_ship.png" class="mode-icon"/>
                     <span class="big">Cargo Ship Mode</span>
                 </div>
                 <div id="rocket">
-                    <img src="rocket.png" style="height: 15vh" />
+                    <img src="rocket.png" class="mode-icon" />
                     <span class="big">Rocket Mode</span>
                 </div>
                 <br /><br /><br/>
                 <div id="hatch">
-                    <img src="hatchpanel.png" style="height: 15vh" />
+                    <img src="hatchpanel.png" class="mode-icon" />
                     <span class="big">Has Hatch Panel</span>
                 </div>
                 <div id="cargo">
-                    <img src="cargo.png" style="height: 15vh" />
+                    <img src="cargo.png" class="mode-icon" />
                     <span class="big">Has Cargo</span>
                 </div>
                 <br /><br /><br/>
                 <div id="align">
-                    <img src="limelight.png" style="height: 15vh" />
+                    <img src="limelight.png" class="mode-icon" />
                     <span class="big">Limelight Align Mode</span>
                 </div>
                 <div id="wrist">
-                    <img src="wrist.png" style="height: 15vh" />
+                    <img src="wrist.png"class="mode-icon" />
                     <span class="big">Wrist Manual Mode</span>
+                </div>
+                <div id="climb">
+                    <img src="hab.png" class="mode-icon" />
+                    <span class="big">Climb Mode</span>
                 </div>
             </div>
             <div id="pneumatics">
