Fix dashboard LL feed; retune wrist zeroing

--- a/src/main/dashboard/index.html
+++ b/src/main/dashboard/index.html
@@ -6,6 +6,8 @@
     <body>
         <section id="container">
             <div id="llfeed">
+                <canvas id="ll-feed-canvas"></canvas>
+                <img src="http://10.10.72.11:5800" style="display: none;" id="ll-image" width="1440px" height="1080px"/>
             </div>
             <div id="message">
                 <div id="cargoship">
